--- a/style.css
+++ b/style.css
@@ -31,9 +31,7 @@
             font-size: 18px;
         }
 
-        .nav a:hover {
-            text-decoration: underline;
-        }
+
 
         .container {
             width: 900px;
@@ -54,7 +52,7 @@
             margin: 20px 0;
             padding: 15px;
             background-color: #fff9f9;
-            border-left: 5px solid #8b0000;
+
         }
 
         .dish img {
@@ -62,7 +60,7 @@
             height: 150px;
             float: left;
             margin-right: 15px;
-            border: 2px solid #8b0000;
+
         }
 
         .footer {
@@ -76,3 +74,22 @@
         .clear {
             clear: both;
         }
+        table {
+                    width: 100%;
+                    border-collapse: collapse;
+                    margin: 20px 0;
+                }
+
+                th, td {
+                    border: 1px solid #8b0000;
+                    padding: 10px;
+                    text-align: left;
+                }
+
+                th {
+                    background-color: #ffcc00;
+                }
+img{
+    width:200px;
+    height:150px;
+}
